[gd_scene load_steps=17 format=3 uid="uid://b4scti6l5fjhi"]

[ext_resource type="Script" path="res://card/projectiles/hotdog_bullet.gd" id="1_wrg6l"]
[ext_resource type="Texture2D" uid="uid://bx0iswep5rcql" path="res://assets/tower_projectiles/hotdog_bun.png" id="2_vhpwv"]
[ext_resource type="PackedScene" uid="uid://brkqxkg4ytilp" path="res://components/bullet_smoke.tscn" id="3_quvu1"]
[ext_resource type="Texture2D" uid="uid://bigvtapq2gbip" path="res://assets/Ketchup_splash.png" id="4_l7rxc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfkf1"]
size = Vector2(44.4, 25.6)

[sub_resource type="Animation" id="Animation_2wg33"]
resource_name = "Explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletSmoke:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1nx3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.296706]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BulletSmoke:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DamageArea:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wm6kb"]
resource_name = "Rotate"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 7.85398]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletSmoke:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r64j5"]
_data = {
"Explode": SubResource("Animation_2wg33"),
"RESET": SubResource("Animation_1nx3y"),
"Rotate": SubResource("Animation_wm6kb")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6kyjd"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_slbir"]
offsets = PackedFloat32Array(0, 0.674074, 1)
colors = PackedColorArray(0.92907, 0.668023, 0, 1, 0.372549, 0.0509804, 0.0509804, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wr0ag"]
gradient = SubResource("Gradient_slbir")

[sub_resource type="Curve" id="Curve_8pwvi"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_df5ew"]
curve = SubResource("Curve_8pwvi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4hskv"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 20.0
emission_ring_radius = 80.0
emission_ring_inner_radius = 0.0
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, -20, 0)
initial_velocity_min = 2.0
initial_velocity_max = 10.0
angular_velocity_max = 180.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_max = 10.0
angle_max = 180.0
scale_min = 4.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_df5ew")
color_ramp = SubResource("GradientTexture1D_wr0ag")
anim_speed_min = 1.0
anim_speed_max = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bwk8u"]
radius = 98.6826

[node name="HotdogBullet" type="Node2D"]
z_index = 50
scale = Vector2(2, 2)
script = ExtResource("1_wrg6l")
speed = 500.0

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 0.296706
texture = ExtResource("2_vhpwv")

[node name="HitDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
shape = SubResource("RectangleShape2D_nfkf1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r64j5")
}

[node name="BulletSmoke" parent="." instance=ExtResource("3_quvu1")]
material = SubResource("CanvasItemMaterial_6kyjd")
amount = 50
process_material = SubResource("ParticleProcessMaterial_4hskv")
texture = ExtResource("4_l7rxc")
lifetime = 2.0

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_bwk8u")

[connection signal="area_entered" from="HitDetector" to="." method="_on_hit_detector_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
